# HSMR

./: .clang-format  .gitattributes  .gitignore  ANALYSIS_REPORT.md  Atmosphere_Scattering_Implementation_Plan.md  Atmosphere_Scattering_Progress.md  CLAUDE.md  CMakeLists.txt  Log.h  README.md
Resource/Shader/: BuiltInMaterialLayout.h  CMakeLists.txt  default.metallib  temp.air
Resource/Shader/HLSL/: Basic.frag.spv  Basic.glsl  Basic.hlsl  Basic.vert.spv  BasicASM.spv
Resource/Shader/MSL/: Basic.metal  BuiltInMaterialLayout.h
Shader/: CMakeLists.txt  GlobalInputLayout.hlsli  GlobalUniform.hlsli
Shader/Slang/Atmosphere/: AtmosphereAPI.hlsli  AtmosphereCommon.hlsli  DirectIrradiance.comp.slang  IndirectIrradiance.comp.slang  MultipleScattering.comp.slang  ScatteringDensity.comp.slang  SingleScattering.comp.slang  Sky.frag.slang  Sky.vert.slang  Transmittance.comp.slang
Source/Client/: CMakeLists.txt  main.cpp  main.mm
Source/Core/: Application.h  CMakeLists.txt  Color.h  EngineContext.h  Event.h  Exception.h  Flag.h  Hash.h  Log.h  SystemContext.h  Window.h
Source/Core/Container/: List.h  ListExample.cpp
Source/Core/HAL/: FileSystem.h  Input.h  Timer.h
Source/Core/Math/: Common.h  Mat4f.h  Math.h  Vec2f.h  Vec3f.h  Vec4f.h
Source/Core/Memory/: MemoryPool.h
Source/Core/Native/: NativeEvent.h  NativeWindow.h
Source/Core/Private/: Application.cpp  Color.cpp  EngineContext.cpp  Event.cpp  Exception.cpp  Flag.cpp  Hash.cpp  Log.cpp  String.cpp  Swapchain.cpp  SystemContext.cpp  Window.cpp
Source/Core/Utility/: StringUtility.h
Source/ECS/: CMakeLists.txt  Entity.h  Scene.h
Source/ECS/Component/: CameraComponent.h  Component.h  LightComponent.h  NameComponent.h  RenderComponent.h  TransformComponent.h
Source/ECS/Private/: Entity.cpp  Scene.cpp
Source/ECS/System/: CameraComponentSystem.h  CameraSystem.h  ComponentSystem.h  LightComponentSystem.h  LightSystem.h  MeshComponentSystem.h  NameComponentSystem.h  NameSystem.h  RenderComponentSystem.h  RenderSystem.h  System.h  TransformComponentSystem.h  TransformSystem.h
Source/Editor/: CMakeLists.txt
Source/Editor/Core/: EditorApplication.cpp  EditorApplication.h  EditorCamera.cpp  EditorCamera.h  EditorWindow.cpp  EditorWindow.h
Source/Editor/EntryPoint/: EditorMain.h
Source/Editor/GUI/: GUIContext.cpp  GUIContext.h  GUIRenderer.cpp  GUIRenderer.h  GUIRenderer.mm  GUIRendererPass.h  ImGuiExtension.h
Source/Editor/Panel/: DockspacePanel.cpp  DockspacePanel.h  HierarchyPanel.cpp  HierarchyPanel.h  InspectorPanel.cpp  InspectorPanel.h  MenuPanel.cpp  MenuPanel.h  Panel.cpp  Panel.h  ProfilerPanel.cpp  ProfilerPanel.h  ResourcePanel.cpp  ResourcePanel.h  ScenePanel.cpp  ScenePanel.h
Source/Engine/: Application.h  CMakeLists.txt  EngineContext.h  Window.h
Source/Engine/Core/: Application.cpp  Application.h  Application.mm  EngineContext.cpp  EngineContext.h  Event.cpp  Event.h  Exception.cpp  Exception.h  FileSystem.cpp  FileSystem.h  Flag.cpp  Flag.h  Log.cpp  Log.h  Scene.cpp  Scene.h  String.h  Swapchain.cpp  Swapchain.h  Window.cpp  Window.h
Source/Engine/ECS/: Entity.cpp  Scene.cpp  Scene.h
Source/Engine/Geometry/: GeometryDefinition.h
Source/Engine/Math/: Mat4f.h  Math.cpp  Math.h  Vec2f.h  Vec3f.h  Vec4f.h
Source/Engine/Object/: Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Object.cpp  Object.h  Shader.cpp  Shader.h
Source/Engine/Platform/: PlatformApplication.h  PlatformCommon.h  PlatformWindow.h
Source/Engine/Private/: Application.cpp  EngineContext.cpp  Window.cpp
Source/Engine/RHI/: CommandHandle.cpp  CommandHandle.h  Framebuffer.cpp  Framebuffer.h  Pipeline.cpp  Pipeline.h  RHIContext.cpp  RHIContext.h  RHIDefinition.cpp  RHIDefinition.h  RHIUtility.h  RenderHandle.cpp  RenderHandle.h  RenderPass.cpp  RenderPass.h  ResourceHandle.cpp  ResourceHandle.h  Shader.cpp  Shader.h  Swapchain.cpp  Swapchain.h
Source/Engine/Renderer/: CommandHandle.h  CommandHandle.mm  DeferredRenderer.h  ForwardPath.h  ForwardRenderer.cpp  ForwardRenderer.h  Framebuffer.h  Framebuffer.mm  Pipeline.h  Pipeline.mm  RHIDefinition.h  RHIUtility.h  RHIUtility.mm  RenderDefinition.h  RenderDefinition.mm  RenderPass.h  RenderPass.mm  RenderPath.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Renderer.mm  RendererDefinition.h  ResourceHandle.cpp  ResourceHandle.h  ResourceHandle.mm  Swapchain.h  Swapchain.mm
Source/Engine/RendererPass/: DebugPass.h  DebugPass.mm  RendererPass.cpp  RendererPass.h  RendererPass.mm
Source/Engine/Resource/: Image.h  Material.h  Mesh.h  Object.h  ObjectManager.h  ResourceDefinition.h  Shader.h
Source/Engine/Utility/: Color.cpp  Color.h  Geometry.h  Hash.cpp  Hash.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  ResourceManager.cpp  ResourceManager.h  Timer.cpp  Timer.h
Source/Geometry/: CMakeLists.txt  GeometryDefinition.h
Source/Geometry/Private/: Geometry.cpp  GeometryDefinition.cpp
Source/HAL/: CMakeLists.txt  FileSystem.h  HALDefinition.h  Input.h  NativeEvent.h  NativeWindow.h  SystemContext.h  Timer.h
Source/HAL/Mac/: AutoReleasePool.h  MacFileSystem.h  MacSystemContext.h  MacWindow.h
Source/HAL/Private/: FileSystem.cpp  (+5 more)
Source/Object/: CMakeLists.txt  Image.h  ImageProxy.h  Material.h  Mesh.h  Object.h  ObjectManager.h  ObjectProxy.h  Serializer.h  Shader.h  ShaderCache.h  ShaderParameterCollection.h  ShaderVariant.h
Source/Physics/: CMakeLists.txt  PhysicsDefinition.h
Source/Platform/: CMakeLists.txt  NativeEvent.h  NativeWindow.h  SystemContext.h
Source/RHI/: CMakeLists.txt  CommandHandle.h  RHIContext.h  RHIDefinition.h  RenderHandle.h  ResourceHandle.h  Swapchain.h
Source/Renderer/: CMakeLists.txt  DeferredPath.h  ForwardPath.h  RenderDefinition.h  RenderPath.h  RenderTarget.h  RendererDefinition.h
Source/Resource/: CMakeLists.txt  Image.h  Material.h  Mesh.h  Object.h  ObjectManager.h  ResourceDefinition.h  ResourceManager.h  Serializer.h  Shader.h  ShaderCache.h  ShaderParameterCollection.h  ShaderVariant.h
Source/ShaderSystem/: CMakeLists.txt  ShaderCacheManager.h  ShaderCrossCompiler.h  ShaderSystemDefinition.h
(+312 files in other folders)
